# zed

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/keymaps/: default-linux.json  default-macos.json
assets/settings/: default.json
assets/themes/: cave-dark.json  cave-light.json  dark.json  light.json  solarized-dark.json  solarized-light.json  sulphurpool-dark.json  sulphurpool-light.json
crates/activity_indicator/src/: activity_indicator.rs
crates/anthropic_ai/: Cargo.toml
crates/anthropic_ai/src/: anthropic_ai.rs
crates/assistant/: Cargo.toml
crates/assistant/src/: assistant_panel.rs  inline_assistant.rs  prompt_library.rs  prompts.rs  slash_command.rs  slash_command_picker.rs  terminal_inline_assistant.rs
crates/assistant2/: Cargo.toml
crates/assistant2/examples/: assistant_example.rs
crates/assistant2/src/: active_thread.rs  assistant.rs  assistant2.rs  assistant_panel.rs  context_picker.rs  context_strip.rs  edits.rs  inline_assistant.rs  inline_prompt_editor.rs  message_editor.rs  terminal_codegen.rs  terminal_inline_assistant.rs  thread.rs  thread_history.rs
crates/assistant_chat/: Cargo.toml
crates/assistant_chat/src/: assistant_chat.rs  static_chat.rs
crates/assistant_settings/: Cargo.toml
crates/assistant_slash_command/src/: assistant_slash_command.rs  extension_slash_command.rs
crates/assistant_tool/src/: assistant_tool.rs
crates/assistant_tools/src/: assistant_tools.rs  code_edits_tool.rs  now_tool.rs
crates/auto_update/src/: auto_update.rs
crates/auto_update_ui/src/: auto_update_ui.rs  update_notification.rs
crates/breadcrumbs/src/: breadcrumbs.rs
crates/cli/src/: main.rs
crates/client/src/: client.rs  telemetry.rs
crates/collab/: Cargo.toml
crates/collab/k8s/: collab.template.yml
crates/collab/src/: main.rs  rpc.rs
crates/collab_ui/: Cargo.toml
crates/collab_ui/src/: channel_view.rs  chat_panel.rs  collab_panel.rs  notification_panel.rs
crates/command_palette/src/: command_palette.rs
crates/context_server/src/: context_server_tool.rs
crates/copilot/src/: copilot_chat.rs  copilot_completion_provider.rs  sign_in.rs
crates/diagnostics/src/: diagnostics.rs  diagnostics_tests.rs  items.rs  toolbar_controls.rs
crates/editor/src/: actions.rs  blame_entry_tooltip.rs  clangd_ext.rs  code_context_menus.rs  display_map.rs  editor.rs  editor_settings_controls.rs  editor_tests.rs  element.rs  hover_links.rs  hover_popover.rs  hunk_diff.rs  inlay_hint_cache.rs  inline_completion_tests.rs  items.rs  mouse_context_menu.rs  movement.rs  proposed_changes_editor.rs  rust_analyzer_ext.rs  test.rs
crates/extensions_ui/src/: extension_version_selector.rs  extensions_ui.rs
crates/feedback/src/: feedback.rs  feedback_modal.rs
crates/file_finder/src/: file_finder.rs  file_finder_tests.rs  new_path_prompt.rs  open_path_prompt.rs
crates/git/src/: repository.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: git_panel.rs  project_diff.rs
crates/go_to_line/src/: cursor_position.rs  go_to_line.rs
crates/gpui/: Cargo.toml  build.rs
crates/gpui/examples/: animation.rs  gif_viewer.rs  gradient.rs  hello_world.rs  image_loading.rs  input.rs  opacity.rs  painting.rs  set_menus.rs  shadow.rs  text_wrapper.rs  uniform_list.rs  window.rs  window_positioning.rs  window_shadow.rs
crates/gpui/src/: app.rs  element.rs  executor.rs  gpui.rs  input.rs  (+6 more)
crates/media/: Cargo.toml  build.rs
crates/refactor/: Cargo.toml
crates/refactor/src/: refactor.rs
crates/semantic_index2/: Cargo.toml
crates/semantic_index2/eval/: tree-sitter.json
crates/semantic_index2/src/: db.rs  embedding_queue.rs  parsing.rs  semantic_index2.rs  semantic_index_settings.rs  semantic_index_tests.rs
crates/workspace/: Cargo.toml
crates/zed2/: Cargo.toml
crates/zeta/: Cargo.toml
script/: bundle  zed-local
(+247 files in other folders)
