[package]
name = "assistant_chat"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/assistant_chat.rs"

[dependencies]
editor.workspace = true
gpui.workspace = true
settings.workspace = true
theme.workspace = true
ui.workspace = true
client.workspace = true
language.workspace = true
workspace.workspace = true

[features]
default = []
