[package]
name = "assistant_chat"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/assistant_chat.rs"

[dependencies]
client.workspace = true
editor.workspace = true
gpui.workspace = true
indoc.workspace = true
language.workspace = true
rich_text.workspace = true
settings.workspace = true
theme.workspace = true
ui.workspace = true
workspace.workspace = true

[features]
default = []
