[package]
name = "refactor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "refactor"
path = "src/refactor.rs"

[dependencies]
anyhow.workspace = true
async-watch.workspace = true
client.workspace = true
clock.workspace = true
env_logger.workspace = true
fs.workspace = true
futures.workspace = true
git.workspace = true
gpui.workspace = true
http_client.workspace = true
language.workspace = true
languages = { workspace = true, features = ["load-grammars"] }
node_runtime.workspace = true
project.workspace = true
settings.workspace = true
util.workspace = true
worktree.workspace = true

[lints]
workspace = true
