[package]
name = "semantic_index2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/semantic_index2.rs"
doctest = false

[dependencies]
ai2 = { path = "../ai2" }
collections = { path = "../collections" }
gpui2 = { path = "../gpui2" }
language2 = { path = "../language2" }
project2 = { path = "../project2" }
workspace = { path = "../workspace" }
util = { path = "../util" }
editor = { path = "../editor" }
rpc2 = { path = "../rpc2" }
settings2 = { path = "../settings2" }
anyhow.workspace = true
postage.workspace = true
futures.workspace = true
ordered-float.workspace = true
smol.workspace = true
rusqlite.workspace = true
log.workspace = true
tree-sitter.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tiktoken-rs = "0.5.0"
parking_lot.workspace = true
rand.workspace = true
schemars.workspace = true
globset.workspace = true
sha1 = "0.10.5"
ndarray = { version = "0.15.0" }

[dev-dependencies]
ai2 = { path = "../ai2", features = ["test-support"] }
collections = { path = "../collections", features = ["test-support"] }
gpui2 = { path = "../gpui2", features = ["test-support"] }
language2 = { path = "../language2", features = ["test-support"] }
project = { path = "../project", features = ["test-support"] }
rpc2 = { path = "../rpc2", features = ["test-support"] }
workspace = { path = "../workspace", features = ["test-support"] }
settings2 = { path = "../settings2", features = ["test-support"]}
rust-embed = { version = "8.0", features = ["include-exclude"] }
client2 = { path = "../client2" }
node_runtime = { path = "../node_runtime"}

pretty_assertions.workspace = true
rand.workspace = true
unindent.workspace = true
tempdir.workspace = true
ctor.workspace = true
env_logger.workspace = true

tree-sitter-typescript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-toml.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
